src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AAM2__Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>AAM2__Manufacturer__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAM2__MaxAssemblyQty__c</fullName>
        <label>Max Assembly Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAM2__Mfrwarrantydays__c</fullName>
        <label>Mfr Warranty Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAM2__MinAssemblyQty__c</fullName>
        <label>Min Assembly Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAM2__Model_Year__c</fullName>
        <label>Model Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAM2__Modelname__c</fullName>
        <label>Model Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAM2__Modelnumber__c</fullName>
        <label>Model Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAM2__Serviceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serviceable</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>AAM2__Component</fullName>
        <active>true</active>
        <description>Use this Record Type to create a new  Component and its details</description>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>AAM2__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <validationRules>
        <fullName>AAM2__Manufacturer_Warranty_days</fullName>
        <active>true</active>
        <errorConditionFormula>AAM2__Mfrwarrantydays__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>AAM2__Mfrwarrantydays__c</errorDisplayField>
        <errorMessage>Mfr Warranty days should be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AAM2__Min_and_Max_Assembly_Qty</fullName>
        <active>true</active>
        <description>To ensure that the minimum assembly quantity should always be lesser than maximum assembly quantity</description>
        <errorConditionFormula>AAM2__MinAssemblyQty__c  &gt; AAM2__MaxAssemblyQty__c  ||  AAM2__MaxAssemblyQty__c  &lt;  AAM2__MinAssemblyQty__c</errorConditionFormula>
        <errorMessage>Please ensure that your Maximum Assembly Qty is greater than the Minimum assembly qty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AAM2__Negative_Qty</fullName>
        <active>true</active>
        <description>To check if a proper positive quantity is entered</description>
        <errorConditionFormula>AAM2__MinAssemblyQty__c  &lt; 0  ||  AAM2__MaxAssemblyQty__c  &lt; 0</errorConditionFormula>
        <errorMessage>Assembly Quantity cannot be negative please enter value again</errorMessage>
    </validationRules>
</CustomObject>